--- a/educationalSystem/src/styles/variables.scss
+++ b/educationalSystem/src/styles/variables.scss
@@ -3,8 +3,8 @@ $menuText:#bfcbd9;
 $menuActiveText:#409EFF;
 $subMenuActiveText:#f4f4f5; //https://github.com/ElemeFE/element/issues/12951
 
-$menuBg:#304156;
-$menuHover:#263445;
+$menuBg:transparent;
+$menuHover:#fff;
 
 $subMenuBg:#1f2d3d;
 $subMenuHover:#001528;
