--- a/educationalSystem/src/styles/variables.scss
+++ b/educationalSystem/src/styles/variables.scss
@@ -1,3 +1,14 @@
+// base color
+$blue: #409EFF;
+$light-blue:#3A71A8;
+$red:#C03639;
+$pink: #E65D6E;
+$green: #30B08F;
+$orange:#fa7c4d;
+$tiffany: #4AB7BD;
+$yellow:#FEC171;
+$panGreen: #30B08F;
+$green1: #44b549;
 // sidebar
 $menuText:#bfcbd9;
 $menuActiveText:#409EFF;
