完成学生页面管理中添加学生的功能

--- a/educationalSystem/src/styles/common.scss
+++ b/educationalSystem/src/styles/common.scss
@@ -216,7 +216,7 @@
   
   // 弹窗信息
   .el-dialog__header {
-    background: #66b1ff;
+    background: #82ccdd;
   
     .el-icon-close:before {
       color: #fff;
